trunk/tests/should-not-compile/int-variable-without-initializer.talc
// EXPECTED ERROR: expected "=", got ";" instead
i:int;
